--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.5",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-numeric-input": "^1.9.1",
     "react-native-safe-area-context": "^4.2.4",
