--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -20,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-mobile": "^0.10.1",
     "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
@@ -36,8 +38,7 @@
     "react-native-select-dropdown": "^2.0.4",
     "react-native-web": "0.17.7",
     "sweetalert2": "^11.4.23",
-    "sweetalert2-react-content": "^5.0.1",
-    "expo-image-picker": "~13.1.1"
+    "sweetalert2-react-content": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
